argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-foundations
  namespace: argo-demo
  labels:
    app: gitops-foundations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gitops-foundations
  template:
    metadata:
      labels:
        app: gitops-foundations
    spec:
      containers:
      - name: gitops-foundations
        image: kmb385/gitops-foundations:1.0.28
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
