argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-foundations
  namespace: argo-demo
spec:
  type: LoadBalancer
  selector:
    app: gitops-foundations 
  ports:
    - port: 8080
